[gd_scene load_steps=6 format=2]

[ext_resource path="res://PixelFontSize6.tres" type="DynamicFont" id=1]
[ext_resource path="res://PixelFontSize12.tres" type="DynamicFont" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameOver.gd" type="Script" id=4]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=5]

[node name="GameOver" type="Node" groups=["GameOver"]]
pause_mode = 2
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ReturnLabel" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -20.0
margin_right = 160.0

[node name="Label" type="Label" parent="ReturnLabel"]
margin_left = 123.0
margin_top = 7.0
margin_right = 196.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Press esc to Return"
align = 1
valign = 1

[node name="HighscoreLabel" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -45.0
margin_right = 160.0
margin_bottom = -25.0

[node name="Label" type="Label" parent="HighscoreLabel"]
margin_left = 160.0
margin_top = 7.0
margin_right = 160.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 101 )

[node name="GameOverLabel" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_top = 27.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="GameOverLabel"]
margin_left = 121.0
margin_right = 199.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over
0"
align = 1
valign = 1

[node name="TileMap" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -6 )
tile_data = PoolIntArray( 458760, 1, 0, 458761, 2, 0, 458762, 2, 0, 458763, 3, 0 )

[node name="NameInput" type="LineEdit" parent="."]
margin_left = 125.0
margin_top = 136.0
margin_right = 195.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 10
placeholder_text = "your name here"

[connection signal="text_entered" from="NameInput" to="." method="_on_NameInput_text_entered"]
